--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.25",
     "vue-router": "^4.1.1",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
