--- a/slimbackend/composer.json
+++ b/slimbackend/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "slim/slim": "3.*",
-        "monolog/monolog": "^2.7"
+        "monolog/monolog": "^2.7",
+        "robmorgan/phinx": "^0.12.11"
     }
 }
