added the users endpoint in slim framework with changes to classes and errors

--- a/slimbackend/composer.json
+++ b/slimbackend/composer.json
@@ -3,5 +3,11 @@
         "slim/slim": "3.*",
         "monolog/monolog": "^2.7",
         "robmorgan/phinx": "^0.12.11"
-    }
+    },
+    "autoload": {
+        "psr-4": {
+            "": "src/classes/"
+        }
+    
+}
 }
