--- a/slimbackend/composer.json
+++ b/slimbackend/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "slim/slim": "3.*",
         "monolog/monolog": "^2.7",
-        "robmorgan/phinx": "^0.12.11"
+        "robmorgan/phinx": "^0.12.11",
+        "tuupola/cors-middleware": "^1.3"
     },
     "autoload": {
         "psr-4": {
