--- a/slimbackend/composer.json
+++ b/slimbackend/composer.json
@@ -3,7 +3,8 @@
         "slim/slim": "3.*",
         "monolog/monolog": "^2.7",
         "robmorgan/phinx": "^0.12.11",
-        "tuupola/cors-middleware": "^1.3"
+        "tuupola/cors-middleware": "^1.3",
+        "chadicus/slim-oauth2-middleware": "^3.3"
     },
     "autoload": {
         "psr-4": {
