--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "vue": "^3.2.25",
     "vue-router": "^4.1.1",
     "vuex": "^4.0.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "yup": "^0.32.11",
+    "yup-password": "^0.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
