--- a/slimbackend/composer.json
+++ b/slimbackend/composer.json
@@ -11,7 +11,9 @@
         "monolog/monolog": "^2.7",
         "robmorgan/phinx": "^0.12.11",
         "tuupola/cors-middleware": "^1.3",
-        "chadicus/slim-oauth2-middleware": "^3.3"
+        "chadicus/slim-oauth2-middleware": "^3.3",
+        "slim/php-view": "^3.2",
+        "chadicus/slim-oauth2": "^3.1"
     },
     "autoload": {
         "psr-4": {
